site: add events & volunteer pages, events JSON + JS renderer, update contact email, add .gitignore

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
     <section id="volunteer" class="container section">
       <h2>Volunteer</h2>
-      <p>Learn about volunteer roles and sign-up details on our <a href="volunteer.html">Volunteer page</a>, or email <a href="mailto:ptarorimer@example.org">ptarorimer@example.org</a>.</p>
+  <p>Learn about volunteer roles and sign-up details on our <a href="volunteer.html">Volunteer page</a>, or email <a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a>.</p>
     </section>
 
     <section id="contact" class="container section">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:ptarorimer@example.org">ptarorimer@example.org</a></p>
+  <p>Email: <a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a></p>
       <p>Follow us on <a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a> (placeholder).</p>
     </section>
   </main>
