feat: add membership page and prominent Join CTA across site; update README

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <img src="assets/logo.svg" alt="Rorimer PTA logo" class="logo">
-      <h1 class="site-title">Rorimer Elementary PTA</h1>
+      <div class="brand-row">
+        <img src="assets/logo.svg" alt="Rorimer PTA logo" class="logo">
+        <h1 class="site-title">Rorimer Elementary PTA</h1>
+      </div>
       <nav class="main-nav">
         <ul>
           <li><a href="index.html#about">About</a></li>
@@ -19,6 +21,9 @@
           <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
+      <div class="header-cta">
+        <a class="btn btn--primary" href="membership.html">Join PTA</a>
+      </div>
     </div>
   </header>
 
@@ -28,6 +33,7 @@
         <h2>Welcome families and community</h2>
         <p>We support Rorimer Elementary through events, volunteering, and community partnerships.</p>
   <a href="volunteer.html" class="btn">Get Involved</a>
+  <a href="membership.html" class="btn btn--primary">Buy Membership</a>
       </div>
     </section>
 
