--- a/events.html
+++ b/events.html
@@ -9,14 +9,19 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <img src="assets/logo.svg" alt="Rorimer PTA logo" class="logo">
-      <h1 class="site-title">Events</h1>
+      <div class="brand-row">
+        <img src="assets/logo.svg" alt="Rorimer PTA logo" class="logo">
+        <h1 class="site-title">Events</h1>
+      </div>
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="volunteer.html">Volunteer</a></li>
         </ul>
       </nav>
+      <div class="header-cta">
+        <a class="btn btn--primary" href="membership.html">Join PTA</a>
+      </div>
     </div>
   </header>
 
