feat(store): add Spirit Wear page and CTAs; update styles and README

--- a/membership.html
+++ b/membership.html
@@ -17,6 +17,9 @@
           <li><a href="events.html">Events</a></li>
         </ul>
       </nav>
+      <div class="header-cta">
+        <a class="btn btn--secondary" href="spiritwear.html">Spirit Wear</a>
+      </div>
     </div>
   </header>
 
