--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </ul>
       </nav>
       <div class="header-cta">
+        <a class="btn btn--secondary" href="spiritwear.html">Spirit Wear</a>
         <a class="btn btn--primary" href="membership.html">Join PTA</a>
       </div>
     </div>
@@ -33,6 +34,7 @@
         <h2>Welcome families and community</h2>
         <p>We support Rorimer Elementary through events, volunteering, and community partnerships.</p>
   <a href="volunteer.html" class="btn">Get Involved</a>
+  <a href="spiritwear.html" class="btn btn--secondary">Shop Spirit Wear</a>
   <a href="membership.html" class="btn btn--primary">Buy Membership</a>
       </div>
     </section>
