feat(i18n): add full bilingual support with Spanish translations
- Add language switcher (EN/ES) in all page headers
- Create complete Spanish site in /es/ directory
- Translate all content including events JSON
- Update events.js to support Spanish locale detection
- Add responsive language navigation styling

--- a/membership.html
+++ b/membership.html
@@ -11,13 +11,12 @@
     <div class="container header-inner">
       <img src="assets/logo.svg" alt="Rorimer PTA logo" class="logo">
       <h1 class="site-title">Join the PTA</h1>
-      <nav class="main-nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="events.html">Events</a></li>
-        </ul>
-      </nav>
       <div class="header-cta">
+        <div class="lang-switcher">
+          <a href="membership.html" class="lang-link active">EN</a>
+          <span class="lang-separator">|</span>
+          <a href="es/membership.html" class="lang-link">ES</a>
+        </div>
         <a class="btn btn--secondary" href="spiritwear.html">Spirit Wear</a>
       </div>
     </div>
