--- a/spiritwear.html
+++ b/spiritwear.html
@@ -18,6 +18,11 @@
         </ul>
       </nav>
       <div class="header-cta">
+        <div class="lang-switcher">
+          <a href="spiritwear.html" class="lang-link active">EN</a>
+          <span class="lang-separator">|</span>
+          <a href="es/spiritwear.html" class="lang-link">ES</a>
+        </div>
         <a class="btn btn--primary" href="membership.html">Join PTA</a>
       </div>
     </div>
