--- a/events.html
+++ b/events.html
@@ -20,6 +20,12 @@
         </ul>
       </nav>
       <div class="header-cta">
+        <div class="lang-switcher">
+          <a href="events.html" class="lang-link active">EN</a>
+          <span class="lang-separator">|</span>
+          <a href="es/events.html" class="lang-link">ES</a>
+        </div>
+        <a class="btn btn--secondary" href="spiritwear.html">Spirit Wear</a>
         <a class="btn btn--primary" href="membership.html">Join PTA</a>
       </div>
     </div>
