--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </ul>
       </nav>
       <div class="header-cta">
+        <div class="lang-switcher">
+          <a href="index.html" class="lang-link active">EN</a>
+          <span class="lang-separator">|</span>
+          <a href="es/index.html" class="lang-link">ES</a>
+        </div>
         <a class="btn btn--secondary" href="spiritwear.html">Spirit Wear</a>
         <a class="btn btn--primary" href="membership.html">Join PTA</a>
       </div>
