feat(contact): add mailing address to contact sections
- Update contact sections on both English and Spanish pages
- Add structured layout with email and mailing address
- Include complete address: 18750 East Rorimer Street, La Puente, CA 91744
- Add responsive grid layout for contact information
- Improve visual hierarchy with subheadings

--- a/es/index.html
+++ b/es/index.html
@@ -61,7 +61,20 @@
 
     <section id="contact" class="container section">
       <h2>Contacto</h2>
-      <p>Correo electrónico: <a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a></p>
+      <div class="contact-info">
+        <div class="contact-method">
+          <h3>Correo Electrónico</h3>
+          <p><a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a></p>
+        </div>
+        <div class="contact-method">
+          <h3>Dirección Postal</h3>
+          <p>
+            Rorimer Elementary PTA<br>
+            18750 East Rorimer Street<br>
+            La Puente, CA 91744
+          </p>
+        </div>
+      </div>
       <p>Síguenos en <a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a> (enlace de ejemplo).</p>
     </section>
   </main>
