fix(contact): correct contact section layout and indentation
- Fix contact section structure and positioning
- Ensure proper indentation throughout index.html
- Contact information now appears in correct section at bottom
- Maintain proper HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <div class="container">
         <h2>Welcome families and community</h2>
         <p>We support Rorimer Elementary through events, volunteering, and community partnerships.</p>
-  <a href="volunteer.html" class="btn">Get Involved</a>
-  <a href="spiritwear.html" class="btn btn--secondary">Shop Spirit Wear</a>
-  <a href="membership.html" class="btn btn--primary">Buy Membership</a>
+        <a href="volunteer.html" class="btn">Get Involved</a>
+        <a href="spiritwear.html" class="btn btn--secondary">Shop Spirit Wear</a>
+        <a href="membership.html" class="btn btn--primary">Buy Membership</a>
       </div>
     </section>
 
@@ -72,12 +72,25 @@
 
     <section id="volunteer" class="container section">
       <h2>Volunteer</h2>
-  <p>Learn about volunteer roles and sign-up details on our <a href="volunteer.html">Volunteer page</a>, or email <a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a>.</p>
+      <p>Learn about volunteer roles and sign-up details on our <a href="volunteer.html">Volunteer page</a>, or email <a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a>.</p>
     </section>
 
     <section id="contact" class="container section">
       <h2>Contact</h2>
-  <p>Email: <a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a></p>
+      <div class="contact-info">
+        <div class="contact-method">
+          <h3>Email</h3>
+          <p><a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a></p>
+        </div>
+        <div class="contact-method">
+          <h3>Mailing Address</h3>
+          <p>
+            Rorimer Elementary PTA<br>
+            18750 East Rorimer Street<br>
+            La Puente, CA 91744
+          </p>
+        </div>
+      </div>
       <p>Follow us on <a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a> (placeholder).</p>
     </section>
   </main>
