fix(critical): repair corrupted HTML structure in index.html
- Fix contact section that was wrongly inserted into <head>
- Restore proper HTML document structure
- Contact information now appears correctly at bottom
- All sections in proper order: hero, about, events, volunteer, contact

--- a/index.html
+++ b/index.html
@@ -1,24 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-    <section id="contact" class="container section">
-      <h2>Contact</h2>
-      <div class="contact-info">
-        <div class="contact-method">
-          <h3>Email</h3>
-          <p><a href="mailto:luanaenriquez@yahoo.com">luanaenriquez@yahoo.com</a></p>
-        </div>
-        <div class="contact-method">
-          <h3>Mailing Address</h3>
-          <p>
-            Rorimer Elementary PTA<br>
-            18750 East Rorimer Street<br>
-            La Puente, CA 91744
-          </p>
-        </div>
-      </div>
-      <p>Follow us on <a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a> (placeholder).</p>
-    </section> <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Rorimer Elementary PTA</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
