feat(social): add social media section with Facebook and Band links
- Add dedicated 'Follow Us' section to both English and Spanish pages
- Include real Facebook link: https://www.facebook.com/profile.php?id=61579653516938&mibextid=ZbWKwL
- Include Band community link: https://band.us/band/97084272
- Add responsive styling with hover effects and emoji icons
- Update navigation to include social media links
- Remove placeholder Facebook reference

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="events.html">Events</a></li>
           <li><a href="volunteer.html">Volunteer</a></li>
           <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="index.html#social">Follow Us</a></li>
         </ul>
       </nav>
       <div class="header-cta">
@@ -75,7 +76,20 @@
           </p>
         </div>
       </div>
-      <p>Follow us on <a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a> (placeholder).</p>
+    </section>
+
+    <section id="social" class="container section">
+      <h2>Follow Us</h2>
+      <div class="social-links">
+        <a href="https://www.facebook.com/profile.php?id=61579653516938&mibextid=ZbWKwL" target="_blank" rel="noopener" class="social-link facebook">
+          <span class="social-icon">📘</span>
+          <span class="social-text">Facebook</span>
+        </a>
+        <a href="https://band.us/band/97084272" target="_blank" rel="noopener" class="social-link band">
+          <span class="social-icon">📱</span>
+          <span class="social-text">Band</span>
+        </a>
+      </div>
     </section>
   </main>
 
