--- a/es/index.html
+++ b/es/index.html
@@ -19,6 +19,7 @@
           <li><a href="events.html">Eventos</a></li>
           <li><a href="volunteer.html">Voluntarios</a></li>
           <li><a href="index.html#contact">Contacto</a></li>
+          <li><a href="index.html#social">Síguenos</a></li>
         </ul>
       </nav>
       <div class="header-cta">
@@ -75,7 +76,20 @@
           </p>
         </div>
       </div>
-      <p>Síguenos en <a href="https://www.facebook.com" target="_blank" rel="noopener">Facebook</a> (enlace de ejemplo).</p>
+    </section>
+
+    <section id="social" class="container section">
+      <h2>Síguenos</h2>
+      <div class="social-links">
+        <a href="https://www.facebook.com/profile.php?id=61579653516938&mibextid=ZbWKwL" target="_blank" rel="noopener" class="social-link facebook">
+          <span class="social-icon">📘</span>
+          <span class="social-text">Facebook</span>
+        </a>
+        <a href="https://band.us/band/97084272" target="_blank" rel="noopener" class="social-link band">
+          <span class="social-icon">📱</span>
+          <span class="social-text">Band</span>
+        </a>
+      </div>
     </section>
   </main>
 
